--- a/Lecture/src/T01/T01.md
+++ b/Lecture/src/T01/T01.md
@@ -64,14 +64,6 @@ h1 {
 
 ---
 
-# Blockchain in engineering applications?
-
----
-
-#
-
----
-
 # Job market
 
 ![bg contain right:50%](./img/salary.png)
@@ -84,75 +76,37 @@ h1 {
 | :-------------------------: | :------------------: |
 |        การสอบกลางภาค        |         20%          |
 |        การสอบปลายภาค        |         20%          |
-|  การประเมินเวปแอปพลิเคชัน   |         30%          |
-|  การประเมินเวปแอปพลิเคชัน   |         30%          |
+|           โปรเจค            |         60%          |
 
 ---
 
 # แผนการสอน
 
 - Midterm
-  - HTML, CSS, JavaScript
-  - "Todo App"
+  - Smart contract / Solidity
+  - Smart contract project (30%)
 - Final
-  - React JS, Google Firebase
-  - Project
+  - Web technology
+  - DAPP project (30%)
 
 ---
 
-# Software
-
-![bg contain right:33%](img/softwaredesktop.png)
-
-- Applications that runs on top of an operating system
-  - Windows, MacOS, Linux, Android, iOS
-- "Talk" to OSs directly.
-- Cannot be used between operation systems.
-- Use different technologies/languages
-  - C# (Windows), Swift (MacOS, iOS), Kotlin (Android), C++ (Linux)
+# What is blockchain?
 
 ---
 
-# Web Application
-
-![bg contain right:33%](./img/htmlcssjs.png)
-
-- Applications that execute on a browser (another application) that runs on top of an operating system.
-- Does not "talk" to the system directly.
-- _Cross platform_
-  - "Write once, use anywhere"
-- Use similar technogoies/languages
-  - HTML, CSS, JavaScript
+# Blockchain in engineering applications?
 
 ---
 
-# Types of "Web" Developers
-
-![bg contain right:50%](./img/Front-end-vs-back-end.jpg)
-
-- Front End
-- Back End
-- Dev Ops
-- Full Stack
+# Limitation of blockchain technology?
 
 ---
 
-# Web Developer Roadmap
+# Introduction to blockchain
 
-[Do not panic!](https://github.com/kamranahmedse/developer-roadmap)
+- [Blockchain demo1](https://andersbrownworth.com/blockchain/)
+- [Public and private keys](https://andersbrownworth.com/blockchain/public-private-keys/)
 
----
-
-# Lets get started
-
----
-
-# Tools
-
-![bg contain right:30%](./img/vscode.png)
-
-- Web browser
-  - Chrome
-- Integrated development environment (IDE)
-  - VS Code
-- _Let's go_
+- [Blockchain demo2](https://blockchaindemo.io/)
+- [Coin demo](https://coindemo.io/)
