--- a/lectures/src/T01/T01.md
+++ b/lectures/src/T01/T01.md
@@ -108,8 +108,12 @@ h1 {
 
 # Introduction to blockchain
 
-- [Blockchain demo1](https://andersbrownworth.com/blockchain/)
+- [Blockchain demo](https://andersbrownworth.com/blockchain/)
 - [Public and private keys](https://andersbrownworth.com/blockchain/public-private-keys/)
 
-- [Blockchain demo2](https://blockchaindemo.io/)
+---
+
+# Other cool demos
+
+- [Blockchain demo](https://blockchaindemo.io/)
 - [Coin demo](https://coindemo.io/)
