--- a/lectures/src/T01/T01.md
+++ b/lectures/src/T01/T01.md
@@ -113,6 +113,12 @@ h1 {
 
 ---
 
+# Note
+
+- [Block explorer](https://www.blockchain.com/explorer)
+
+---
+
 # Other cool demos
 
 - [Blockchain demo](https://blockchaindemo.io/)
