--- a/lectures/src/T01 - Introduction/T01.md
+++ b/lectures/src/T01 - Introduction/T01.md
@@ -106,20 +106,7 @@ h1 {
 
 ---
 
-# Introduction to blockchain
+# Setting Up
 
-- [Blockchain demo](https://andersbrownworth.com/blockchain/)
-- [Public and private keys](https://andersbrownworth.com/blockchain/public-private-keys/)
-
----
-
-# Note
-
-- [Block explorer](https://www.blockchain.com/explorer)
-
----
-
-# Other cool demos
-
-- [Blockchain demo](https://blockchaindemo.io/)
-- [Coin demo](https://coindemo.io/)
+- MetaMask
+- [Get some ETH](https://goerlifaucet.com/)
