--- a/lectures/src/T02 - Blockchain 101/T02.md
+++ b/lectures/src/T02 - Blockchain 101/T02.md
@@ -26,20 +26,85 @@ h1 {
 
 ---
 
-# Introduction to blockchain
+# Short history - Bitcoin
+
+- October 31, 2008
+
+  - "[White paper](https://bitcoin.org/bitcoin.pdf)" by _Satoshi Nakamoto_
+  - Describing a system to allow peer to peer payments without a financial intermediary (like a bank)
+
+- January 3, 2009
+  - The bitcoin network came into existence with Satoshi Nakamoto mining the genesis block of bitcoin (block number 0), which had a reward of 50 bitcoins
+
+---
+
+# Shortcoming
+
+Bitcoin can only be used for sending money.
+
+> Can we use bitcoin technology to transfer other types of exchanges?
+
+---
+
+# Short history - Ethereum
+
+- December 2013
+  - "[White paper](https://blockchainlab.com/pdf/Ethereum_white_paper-a_next_generation_smart_contract_and_decentralized_application_platform-vitalik-buterin.pdf)" by _Vitalik Buterin_
+  - Discussing need for more programmatic control over transactions
+  - Introducing the idea of _Smart Contracts_ as an entity that can send and receive currency, beyond just humans
+- July 2015
+  - Birth of Ethereum network
+
+![bg contain right:30%](./img/vb.jpg)
+
+---
+
+# Getting to know blockchain
 
 - [Blockchain demo](https://andersbrownworth.com/blockchain/)
 - [Public and private keys](https://andersbrownworth.com/blockchain/public-private-keys/)
-
----
-
-# Note
-
 - [Block explorer](https://www.blockchain.com/explorer)
 
----
-
-# Other cool demos
+### Other cool demos
 
 - [Blockchain demo](https://blockchaindemo.io/)
 - [Coin demo](https://coindemo.io/)
+
+---
+
+# Getting to know ethereum
+
+- Ethereum networks are used to transfer money and store data
+- There are many different [Ethereum networks](https://chainlist.org/).
+- Networks are formed by one or more nodes.
+
+![bg contain right:40%](./img/eth_diagram.jpg)
+
+---
+
+# Getting to know ethereum
+
+- Each node is a machine running an [ethereum client](https://geth.ethereum.org/).
+  - Anyone can run a node.
+- Each node can contain a full copy of the blockchain.
+  - Stores the record of every transaction that has ever taken place.
+
+---
+
+# Interacting with Ethereum network
+
+![width:900](./img/eth_diagram2.jpg)
+MetaMask uses [Infura](https://metamask.zendesk.com/hc/en-us/articles/4417315392795-What-is-Infura-and-why-does-MetaMask-use-it-) node.
+
+---
+
+# Proof of work vs proof of stake
+
+[Source](https://www.leewayhertz.com/proof-of-work-vs-proof-of-stake/)
+![bg contain right:40%](./img/proof.jpg)
+
+---
+
+# Ethereum merge
+
+https://www.coindesk.com/tech/2022/08/24/ethereum-merge-has-an-official-kick-off-date/s
