--- a/lectures/src/T02 - Blockchain 101/T02.md
+++ b/lectures/src/T02 - Blockchain 101/T02.md
@@ -100,11 +100,66 @@ MetaMask uses [Infura](https://metamask.zendesk.com/hc/en-us/articles/4417315392
 
 # Proof of work vs proof of stake
 
+---
+
+![width:700](./img/proof.jpg)
+
 [Source](https://www.leewayhertz.com/proof-of-work-vs-proof-of-stake/)
-![bg contain right:40%](./img/proof.jpg)
+
+---
+
+| Proof of Work                                  | Proof of Stake                                          |
+| ---------------------------------------------- | ------------------------------------------------------- |
+| Participating nodes are called miners          | Participating nodes are called validators or forgers    |
+| Mining capacity depends on computational power | Validating capacity depends on the stake in the network |
+| Mining produces new coins                      | No new coins are formed                                 |
+| Miners receive block rewards                   | Validators receive transaction fees                     |
+| Massive energy consumption                     | Low to moderate energy consumption                      |
+| Significantly prone to 51% attacks             | 51% attacks are virtually impossible                    |
 
 ---
 
 # Ethereum merge
 
-https://www.coindesk.com/tech/2022/08/24/ethereum-merge-has-an-official-kick-off-date/s
+- The upgrade from the original proof-of-work mechanism to proof-of-stake was called The Merge.
+- The Merge refers to the original Ethereum Mainnet merging with a separate proof-of-stake blockchain called the Beacon Chain, now existing as one chain.
+- The Merge reduced Ethereum's energy consumption by ~99.95%.
+
+---
+
+![width:900](./img/eth_merge.png)
+[Source](https://ethereum.org/en/upgrades/merge/)
+
+---
+
+![width:700](./img/eth_merge2.jpg)
+[Source](https://www.coindesk.com/tech/2022/08/24/ethereum-merge-has-an-official-kick-off-date/)
+
+---
+
+# Account
+
+- **Externally-owned account (EOA)** – controlled by anyone with the private keys
+- **Contract account** – a smart contract deployed to the network, controlled by code.
+
+---
+
+# Transaction
+
+- An Ethereum transaction refers to an action initiated by an externally-owned account
+  - In other words an account managed by a human, not a contract.
+- For example, if Bob sends Alice 1 ETH, Bob's account must be debited and Alice's must be credited. This state-changing action takes place within a transaction.
+
+---
+
+# Let's look at a contract
+
+- Send somebody some ETH.
+  - If you want, you can send it to me 😊. 0x6269f27234747F4ac12A6d5E88c75e021da290CF
+- [Transaction example](https://goerli.etherscan.io/tx/0xfac39fead3ce33ba0719f39a796bdd40b50b7132df14ba6e54b504540cf92852)
+
+---
+
+# Why we waited?
+
+https://etherscan.io/chart/blocktime
