--- a/lectures/src/T02 - Blockchain 101/T02.md
+++ b/lectures/src/T02 - Blockchain 101/T02.md
@@ -59,6 +59,23 @@ Bitcoin can only be used for sending money.
 
 ---
 
+# Shortcoming
+
+---
+
+## ![width:800](./img/gen3.png)
+
+---
+
+# 3rd-Gen blockchain
+
+- Cardano
+  Launched in 2017, Cardano is an open-source proof-of-stake blockchain platform that aims to achieve the interoperability, scalability, and sustainability needed for real-world applications. This, in turn, will (and already has) open new markets and solve a broad range of problems across multiple industries, such as education, retail, agriculture, government, finance, healthcare, and others.
+
+-
+
+---
+
 # Getting to know blockchain
 
 - [Blockchain demo](https://andersbrownworth.com/blockchain/)
