--- a/lectures/src/T02 - Blockchain 101/T02.md
+++ b/lectures/src/T02 - Blockchain 101/T02.md
@@ -61,18 +61,27 @@ Bitcoin can only be used for sending money.
 
 # Shortcoming
 
----
+- Scalbility
+- Interoperability
+  - Moving token between differnet networks.
 
-## ![width:800](./img/gen3.png)
+## [Source](https://www.coindesk.com/learn/cardano-vs-ethereum-can-ada-solve-ethers-problems/)
 
 ---
 
 # 3rd-Gen blockchain
 
 - Cardano
-  Launched in 2017, Cardano is an open-source proof-of-stake blockchain platform that aims to achieve the interoperability, scalability, and sustainability needed for real-world applications. This, in turn, will (and already has) open new markets and solve a broad range of problems across multiple industries, such as education, retail, agriculture, government, finance, healthcare, and others.
+- Pokadot
+- Optimism
+- Polygon
+- Anvalanche
+- Solana\*
+- Cosmos
 
--
+[Source](https://medium.com/web3labs/whats-next-for-blockchain-3rd-generation-platforms-a26f34da4d59)
+
+## ![bg contain right:50%](./img/gen3.png)
 
 ---
 
