--- a/lectures/src/T02 - Blockchain 101/T02.md
+++ b/lectures/src/T02 - Blockchain 101/T02.md
@@ -62,26 +62,23 @@ Bitcoin can only be used for sending money.
 # Shortcoming
 
 - Scalbility
+  - Bitcoin: 7 tps
+  - Ethereum (V1): 30 tps
+  - Visa 24,000 tps
 - Interoperability
   - Moving token between differnet networks.
+- Governance system
+  - Bitcoin Foundation and Ethereum Foundation are centralized organization.
 
-## [Source](https://www.coindesk.com/learn/cardano-vs-ethereum-can-ada-solve-ethers-problems/)
+[Source](https://www.coindesk.com/learn/cardano-vs-ethereum-can-ada-solve-ethers-problems/)
 
 ---
 
-# 3rd-Gen blockchain
-
-- Cardano
-- Pokadot
-- Optimism
-- Polygon
-- Anvalanche
-- Solana\*
-- Cosmos
+# 3rd-Generation blockchain
 
 [Source](https://medium.com/web3labs/whats-next-for-blockchain-3rd-generation-platforms-a26f34da4d59)
 
-## ![bg contain right:50%](./img/gen3.png)
+## ![bg contain right:40%](./img/gen3.png)
 
 ---
 
@@ -131,6 +128,22 @@ MetaMask uses [Infura](https://metamask.zendesk.com/hc/en-us/articles/4417315392
 ![width:700](./img/proof.jpg)
 
 [Source](https://www.leewayhertz.com/proof-of-work-vs-proof-of-stake/)
+
+---
+
+# Proof of work
+
+![width:800](./img/pow1.png)
+
+## [Source](https://www.web3labs.com/blockchain-myths)
+
+---
+
+# Proof of stake
+
+![width:800](./img/pos1.png)
+
+## [Source](https://www.web3labs.com/blockchain-myths)
 
 ---
 
