--- a/lectures/src/T02 - Blockchain 101/T02.md
+++ b/lectures/src/T02 - Blockchain 101/T02.md
@@ -199,6 +199,8 @@ MetaMask uses [Infura](https://metamask.zendesk.com/hc/en-us/articles/4417315392
 
 ---
 
-# Why we waited?
+# How long do we have to wait?
 
-https://etherscan.io/chart/blocktime
+- [Block time](https://etherscan.io/chart/blocktime)
+
+- [Details](https://medium.com/stakefish/deeper-dive-into-ethereum-2-0-part-1-93c475a18735)
