--- a/lectures/src/T02 - Blockchain 101/T02.md
+++ b/lectures/src/T02 - Blockchain 101/T02.md
@@ -204,3 +204,31 @@ MetaMask uses [Infura](https://metamask.zendesk.com/hc/en-us/articles/4417315392
 - [Block time](https://etherscan.io/chart/blocktime)
 
 - [Details](https://medium.com/stakefish/deeper-dive-into-ethereum-2-0-part-1-93c475a18735)
+
+---
+
+# Gas
+
+> Gas fees help keep the Ethereum network secure. By requiring a fee for every computation executed on the network, we prevent bad actors from spamming the network.
+
+---
+
+# Gas
+
+- Gas refers to the unit that measures the amount of computational effort required to execute specific operations on the Ethereum network.
+- Gas fees are paid in ether `ETH`.
+- Unit of gas is `gwei`.
+
+  - 1 `gwei` = 0.000000001 `ETH` (10^-9 `ETH`).
+
+- Gas limit
+
+  - Maximum amount of gas you are willing to consume on a transaction.
+  - A standard ETH transfer requires a gas limit of 21,000 `gwei`.
+
+---
+
+# Gas information
+
+- https://etherscan.io/gastracker
+- https://ethgasstation.info/
