--- a/lectures/src/T02 - Blockchain 101/T02.md
+++ b/lectures/src/T02 - Blockchain 101/T02.md
@@ -95,6 +95,18 @@ Bitcoin can only be used for sending money.
 
 ---
 
+# Keys
+
+![width:700](./img/keys.jpg)
+
+---
+
+# Signature
+
+![width:700](./img/signature.jpg)
+
+---
+
 # Getting to know ethereum
 
 - Ethereum networks are used to transfer money and store data
