--- a/lectures/src/T02 - Blockchain 101/T02.md
+++ b/lectures/src/T02 - Blockchain 101/T02.md
@@ -61,9 +61,9 @@ Bitcoin can only be used for sending money.
 
 # Shortcoming
 
-- Scalbility
-  - Bitcoin: 7 tps
-  - Ethereum (V1): 30 tps
+- Scalability
+  - Bitcoin (Layer 1): 7 tps
+  - Ethereum (1.0): 30 tps
   - Visa 24,000 tps
 - Interoperability
   - Moving token between differnet networks.
