--- a/lectures/src/T03 - Smart Contract/T03.md
+++ b/lectures/src/T03 - Smart Contract/T03.md
@@ -28,6 +28,60 @@ h1 {
 
 # Smart contract
 
+- A smart contact is an account controlled by code.
+- The code instructs the account how to behave.
+  ![bg contain right:50%](./img/sc.jpg)
+
 ---
 
-# Contract account
+| Field   | Description                                        |
+| ------- | -------------------------------------------------- |
+| Balance | Amount of ether this accoun owns. (Similar to EOA) |
+| Storage | Data storage for this contract                     |
+| Code    | Raw machine code for this contract                 |
+
+---
+
+# Contract account deployment
+
+- A particular EOA is valid in all networks.
+- CA needs is locally available in the deployed network.
+
+![bg contain right:50%](./img/sc3.jpg)
+
+---
+
+# Contract account deployment
+
+- We write source code.
+- We deploy contract to a network.
+  - Create an _instance_ of a contract (or **contract account**)
+- There can be multiple instance of a contract.
+
+![bg contain right:50%](./img/sc4.jpg)
+
+---
+
+# Class
+
+![width:600](./img/class.jpg)
+
+---
+
+# Solidity programming language
+
+- Language that we will use to write the source code of a smart contract.
+- Written in `.sol` files
+- Strongly typed
+
+---
+
+# Workflow
+
+![width:600](./img/solidity1.jpg)
+
+---
+
+# ABI
+
+![width:400](./img/solidity2.jpg)
