--- a/lectures/src/T03 - Smart Contract/T03.md
+++ b/lectures/src/T03 - Smart Contract/T03.md
@@ -45,7 +45,7 @@ h1 {
 # Contract account deployment
 
 - A particular EOA is valid in all networks.
-- CA needs is locally available in the deployed network.
+- CA is locally available in the deployed network.
 
 ![bg contain right:50%](./img/sc3.jpg)
 
@@ -84,4 +84,23 @@ h1 {
 
 # ABI
 
-![width:400](./img/solidity2.jpg)
+- Application Binary Inteface
+- Defines the structures and methods to interact with the binary contract.
+
+![bg right:50%](./img/solidity2.jpg)
+
+---
+
+# JavaScript VM
+
+- A simulated Blockchain Environment that only exists in your browser.
+- It also only exists as long as you keep the browser-tab open. Close it or reload it, you start from scratch.
+- Two flavors
+  - Berlin
+  - London (more updated)
+
+---
+
+# Let's code (... actually not yet)
+
+https://remix.ethereum.org/
