--- a/lectures/src/T04 - Solidity Programming/T04.md
+++ b/lectures/src/T04 - Solidity Programming/T04.md
@@ -91,3 +91,82 @@ This is a
 multi-line comment.
 */
 ```
+
+---
+
+# Basic syntax
+
+- Case sensitive
+- Every statement must end with a semicolon `;`.
+- Use curly braces `{}` for a block of code.
+- Most of the structures are available
+  - `if`, `else`, `while`, `for`, `break`, `return`
+
+---
+
+# Variable
+
+- State variables
+- Local variables
+
+---
+
+# State variables
+
+- Declared at the contract level.
+- Permanently stored in contract storage.
+- Can be set as `constant`.
+- Expensive to use
+  - _Costs gas_
+- To set value of a state variable
+  - Initailize value at declaration.
+
+---
+
+# Local variables
+
+- Declared inside functions.
+- Free (no gas cost).
+- Use `memory` keyword for `string`.
+
+---
+
+# Where is the data stored?
+
+---
+
+# 1. Storage
+
+- Holds state variables.
+- Persistent and expensive
+  - It costs gas.
+- Like a computer HDD.
+
+---
+
+# 2. Stack
+
+- Holds local variables defined inside functions
+  - If they are not reference types
+  - `int`, `uint`, for example
+- Free to be used
+  - It doesn't cost gas.
+
+---
+
+# 3. Memory
+
+- Holds local variables defined inside functions
+  - If they are reference types.
+  - `string`, `array`, `struct` and `mapping`
+  - Use `memory` keyword.
+- Holds function arguments;
+- Like a computer RAM;
+- Free to be used
+  - It doesn’t cost gas.
+
+---
+
+![width:800px](./img/data_storage.png)
+
+[Source](https://jamesbachini.com/assembly-in-solidity/)
