--- a/lectures/src/T05 - Function/T05.md
+++ b/lectures/src/T05 - Function/T05.md
@@ -64,6 +64,28 @@ h1 {
 
 ---
 
+# Getter function
+
+- A function that returns a value.
+- Use keywords `view` or `constant`.
+- Automatically created for public state variable.
+
+---
+
+# Setter function
+
+- A function that modifies the value of a variable
+  - Modifies the state of the contract.
+
+---
+
+# Invoking a function
+
+- Calling a function
+- Sending a transaction (to a function)
+
+---
+
 # Calling a function
 
 - Local invocation of a contract function
@@ -78,7 +100,7 @@ h1 {
 
 ---
 
-# Sending a transaction (to a function)
+# Sending a transaction to a function
 
 - A transaction is broadcasted to the network, processed by miners, and if valid, is published on the blockchain.
 - It is a write-operation
@@ -87,3 +109,9 @@ h1 {
 - It is asynchronous.
   - Takes time to execute.
   - Immediately return transaction's hash.
+
+---
+
+# Constructor
+
+A constructor is a function that is executed only once when the contract is deployed on the Ethereum blockchain.
