--- a/lectures/src/T05 - Function/T05.md
+++ b/lectures/src/T05 - Function/T05.md
@@ -67,7 +67,7 @@ h1 {
 # Getter function
 
 - A function that returns a value.
-- Use keywords `view` or `constant`.
+- Use keywords `view`.
 - Automatically created for public state variable.
 
 ---
@@ -114,4 +114,5 @@ h1 {
 
 # Constructor
 
-A constructor is a function that is executed only once when the contract is deployed on the Ethereum blockchain.
+- A function that is executed only once when the contract is deployed on the Ethereum blockchain.
+- No need to use `public` keyword.
