--- a/lectures/src/T05 - Function/T05.md
+++ b/lectures/src/T05 - Function/T05.md
@@ -94,7 +94,7 @@ h1 {
   - Will not consume any Ether.
 - It is synchronous.
   - Return value immediately.
-- Marked with `view`, `pure`, `constant`.
+- Marked with `view`, `pure`.
 
 [Source](https://ethereum.stackexchange.com/questions/765/what-is-the-difference-between-a-transaction-and-a-call)
 
