--- a/lectures/src/T07 - Lottery V2/T07.md
+++ b/lectures/src/T07 - Lottery V2/T07.md
@@ -44,6 +44,24 @@ contract lottery {
 
 ---
 
+# Add players arrays
+
+```js
+address[] public players;
+```
+
+---
+
+# Add `enter` function
+
+```js
+function enter() public payable {
+    players.push(msg.sender);
+}
+```
+
+---
+
 # Function type
 
 ###
@@ -62,8 +80,131 @@ contract lottery {
 
 ---
 
+# Add a check for minimum amount
+
+```js
+require(msg.value > 0.1 ether, "Please send at least 0.1 ETH.");
+```
+
+---
+
+# `require` function
+
+- Used to verify inputs and conditions before execution.
+- If the condition is false, then the require function immediately stops execution.
+
+```js
+require(sum == 10, "Incorrect");
+```
+
+---
+
 # Unit converter
 
 - 1 ether (ETH) = 1e18 wei
   - 1 ETH = 1,000,000,000,000,000,000 wei
 - [Link](https://eth-converter.com/)
+
+---
+
+# Add `getPlayers` function
+
+```js
+function getPlayers() public view returns(address[] memory) {
+    return players;
+}
+```
+
+---
+
+# Add a function to generate random number
+
+```js
+function random() private view returns (uint256) {
+  ...
+}
+```
+
+---
+
+# Random number
+
+- Solidity code should be deterministic
+  - It will run on multiple nodes.
+- We need an algorithm that is able to generate a random number once, and use it on multiple nodes.
+
+---
+
+# Psudeo-random number generation
+
+- Use `block.timestamp` and `block.difficulty`
+- ➡️ `abi.encodedPacked()`
+  - Argument-encoding function
+  - Output: `bytes` (dynamic array of `byte`)
+- ➡️ `keccak256()`
+  - Hash function
+  - Output: `bytes32` (array of exactly 32 bytes long)
+- ➡️ `uint256()`
+  - Output: `uint256`
+
+---
+
+# Add `pickWinner` function
+
+```js
+function pickWinner() public {
+    uint256 idx = random() % players.length;
+    uint256 balance = address(this).balance;
+    payable(players[idx]).transfer(balance);
+}
+```
+
+---
+
+# Select a winner
+
+![](./img/winner.jpg)
+
+---
+
+# `this` keyword
+
+- Pointer to the current contract.
+- Convertible to `address`.
+  - `address(this)`
+
+---
+
+# `address` vs `address payable` types
+
+- The `address` and `address payable` are different types.
+- You can use `.transfer(..)` on `address payable`, but not on `address`.
+- To change from `address` to `address payable`,
+  - Use `payable(...)` function
+
+---
+
+# Reset
+
+```js
+players = new address[](0);
+```
+
+---
+
+# Reset
+
+![](./img/reset.jpg)
+
+---
+
+# Validation
+
+```js
+require(msg.sender == manager, "You need to be a manager.");
+require(players.length > 0, "Need at least one player.");
+```
+
+---
+
+# Let's play a lottery.
