--- a/lectures/src/T08 - Auction V1/T08.md
+++ b/lectures/src/T08 - Auction V1/T08.md
@@ -28,3 +28,70 @@ h1 {
 # Auction
 
 ---
+
+# How it works
+
+- Like ebay.
+- Auction has `owner` (seller), `start`, `end`.
+- `owner` can cancel auction or can finalize the auction after `end` time.
+- Users bid by sending ETH to the contract.
+  - The contract will store addresses and bid amount.
+
+---
+
+# How it works
+
+- The current price (`highestBindingBid`) will be the previous highest bid plus an `increment`.
+- After the auction ends,
+  - `highestBindingBid` is the selling price.
+  - `highestbidder` is the buyer.
+  - `owner` gets the `highestBindingBid`
+  - Everybody else get their money back.
+
+---
+
+# Enums
+
+- Enums restrict a variable to have one of only a few predefined values.
+- Reduce the number of bugs in your code.
+
+```js
+enum State {Open, Closed}
+```
+
+---
+
+# Mapping
+
+- Data structure that holds `key`, `value` pairs.
+  - Similar to `dict` in Python
+- All keys must have the same type.
+- All values must have the same type.
+- Key cannot be `mapping`, `dynamic array`, `enum`, or `struct`.
+
+---
+
+# Mapping
+
+- Always saved in storage.
+- Lookup time is constant **no matter of the size**.
+- Cannot iterate keys.
+- The value of an **non-existent** key is a default value.
+
+```js
+mapping(address => uint) public bids;
+```
+
+---
+
+# Declare variables and constructor
+
+---
+
+# Function modifier
+
+- Used to modifer behavior of a function.
+- Can be used to test a condition.
+  - Avoid writing redundant code.
+- Don't `return`.
+- Defined by `modifier` keyword.
