--- a/lectures/src/T08 - Auction V1/T08.md
+++ b/lectures/src/T08 - Auction V1/T08.md
@@ -50,6 +50,13 @@ h1 {
 
 ---
 
+# Declare variables and constructor
+
+- Enums
+- Mapping
+
+---
+
 # Enums
 
 - Enums restrict a variable to have one of only a few predefined values.
@@ -84,10 +91,6 @@ mapping(address => uint) public bids;
 
 ---
 
-# Declare variables and constructor
-
----
-
 # Function modifier
 
 - Used to modifer behavior of a function.
@@ -95,3 +98,15 @@ mapping(address => uint) public bids;
   - Avoid writing redundant code.
 - Don't `return`.
 - Defined by `modifier` keyword.
+
+---
+
+# Bidding logic
+
+![](./img/auc1.jpg)
+
+---
+
+# Bidding logic
+
+![](./img/auc2.jpg)
