--- a/lectures/src/T10 - Auction V3/T10.md
+++ b/lectures/src/T10 - Auction V3/T10.md
@@ -25,16 +25,23 @@ h1 {
 
 ---
 
-# Auction
+# Auction (V2)
 
 ---
 
-# Bidding logic
-
-![](./img/auc1.jpg)
+# Cancel the auction
 
 ---
 
-# Bidding logic
+# Withdrawal pattern
 
-![](./img/auc2.jpg)
+- You should not send back back the fund to users that did not win the auction.
+  - Use **withdrawal pattern** instead.
+- You should send ETH to a user who requests it.
+- This avoids **re-entrace attacks**.
+
+---
+
+# Re-entrace attack
+
+- Reentrancy attack in Solidity repeatedly withdraws funds from a smart contract and transfers them to an unauthorized contract until the funds have been exhausted.
