--- a/lectures/src/T10 - Auction V3/T10.md
+++ b/lectures/src/T10 - Auction V3/T10.md
@@ -25,7 +25,7 @@ h1 {
 
 ---
 
-# Auction (V2)
+# Auction (Continued)
 
 ---
 
@@ -45,3 +45,14 @@ h1 {
 # Re-entrace attack
 
 - Reentrancy attack in Solidity repeatedly withdraws funds from a smart contract and transfers them to an unauthorized contract until the funds have been exhausted.
+
+---
+
+# Contract factory pattern
+
+- Instead of directly creating instances of objects
+  - you have a single object (the factory) that does it for you.
+- Benefits
+  - Deployments of multiple contracts with high gas-efficiency
+  - Keep track of all deployed contracts
+  - Save gas on multiple contract deployments
